deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marketflow-retireops
  namespace: apps
spec:
  type: NodePort
  selector:
    app: marketflow-retireops
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 31081
